--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="no_items">No items to display!</string>
-    
+
     <string-array name="android_names">
         <item>Android Beta</item>
         <item>Android 1.0</item>
@@ -20,5 +20,7 @@
         <item>Android 1.1</item>
         <item>Android Something</item>
     </string-array>
+
+    <string name="title_activity_second">SecondActivity</string>
 
 </resources>
