--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,8 +2,9 @@
 <resources>
 
     <string name="app_name">AUScience</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="action_about">About</string>
+    <string name="about">Blog Reader App. Copyright AUScience Aberdeen in collaboration with Team Epicness.</string>
+    <string name="participants">Developers: Ivan Ivanov, Svetoslav Petrov and Todor Davchev</string>
     <string name="no_items">No items to display!</string>
 
     <string-array name="android_names">
