--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,9 +3,11 @@
 
     <string name="app_name">AUScience</string>
     <string name="action_about">About</string>
+    <string name="action_tweet">Tweet</string>
     <string name="about">Blog Reader App. Copyright AUScience Aberdeen in collaboration with Team Epicness.</string>
     <string name="participants">Developers: Ivan Ivanov, Svetoslav Petrov and Todor Davchev</string>
     <string name="no_items">No items to display!</string>
+    <string name="buttonLogin">Log in Twitter</string>
 
     <string-array name="android_names">
         <item>Android Beta</item>
@@ -30,5 +32,7 @@
     <string name="share_chooser_title">How do you want to share?</string>
     <string name="title_activity_display_about">DisplayAboutActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_display_tweet">DisplayTweetActivity</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
