--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="app_name">AUScience</string>
     <string name="action_about">About</string>
     <string name="action_tweet">Tweet</string>
-    <string name="about">Blog Reader App. Copyright AUScience Aberdeen in collaboration with Team Epicness.</string>
-    <string name="participants">Developers: Ivan Ivanov, Svetoslav Petrov and Todor Davchev</string>
+    <string name="about"><b>Blog Reader App</b> \u00a9 AUScience Aberdeen in collaboration with Team Epicness.</string>
+    <string name="participants"><b>Developers</b> \n Ivan Ivanov, Svetoslav Petrov and Todor Davchev</string>
     <string name="no_items">No items to display!</string>
     <string name="buttonLogin">Log in Twitter</string>
 
@@ -30,9 +30,9 @@
     <string name="title_activity_blog_web_view">Blog Post</string>
     <string name="action_share">Share</string>
     <string name="share_chooser_title">How do you want to share?</string>
-    <string name="title_activity_display_about">DisplayAboutActivity</string>
+    <string name="title_activity_display_about">About Us</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_display_tweet">DisplayTweetActivity</string>
+    <string name="title_activity_display_tweet">Tweeter</string>
     <string name="hello_world">Hello world!</string>
 
 </resources>
